# remote-sensing-studies

./: .gitignore  README.md
land_temperature/: .cache.sqlite  README.md  gee.ipynb
obia/: README.md  classification.ipynb  project.ipynb  solar_aoi.json
obia/images/: Barcelona.tif.aux.xml  Crops_USA.tif.aux.xml
obia/output/: rf_classification.geojson  slic_segments.geojson
obia/src/: indices.py  obia.py  utils.py
spacesense-datacube-challenge/: README.md
stac_api/: README.md  main.py  pyproject.toml  stac.ipynb
stac_api/assets/: agriculture.geojson  mine_aoi.geojson
stac_api/utils/: image_correction.py
