[project]
name = "stac-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bottleneck>=1.6.0",
    "dash>=3.2.0",
    "geogif>=0.3",
    "geopandas>=1.1.1",
    "leafmap>=0.53.1",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.3",
    "stackstac>=0.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
